updated Japanese translation

--- a/po/wesnoth-dw/ja.po
+++ b/po/wesnoth-dw/ja.po
@@ -1,11 +1,12 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-07-11 10:25+0000\n"
 "Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2018\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
@@ -86,7 +87,7 @@ msgstr ""
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:25
 msgid "(Intermediate level, 10 scenarios.)"
-msgstr "（中級者レベル、10 シナリオ）"
+msgstr "（中級レベル、10 シナリオ）"
 
 #. [about]
 #: data/campaigns/Dead_Water/_main.cfg:31
