--- a/po/wesnoth-ei/ja.po
+++ b/po/wesnoth-ei/ja.po
@@ -1,12 +1,13 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2018\n"
+"PO-Revision-Date: 2018-09-12 07:30+0000\n"
+"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -69,8 +70,10 @@ msgstr ""
 
 #. [campaign]: id=Eastern_Invasion
 #: data/campaigns/Eastern_Invasion/_main.cfg:24
+#, fuzzy
+#| msgid "(Novice level, 16 scenarios.)"
 msgid "(Intermediate level, 16 scenarios.)"
-msgstr "（中級者レベル, 16 シナリオ）"
+msgstr "（初級レベル、16 シナリオ）"
 
 #. [about]
 #: data/campaigns/Eastern_Invasion/_main.cfg:28
@@ -544,9 +547,6 @@ msgid ""
 "currently inhabited by trolls. Now hurry, we have to move quickly; the "
 "undead will surely follow us down here."
 msgstr ""
-"これは前哨基地の古い脱出トンネルです。不幸なことにこの洞窟には現在トロルが住"
-"み着いています。さあ急ぎましょう。急いで移動しなくてはなりません。アンデッド"
-"は間違いなく私たちを追ってここへ降りてきます。"
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:193
@@ -617,8 +617,11 @@ msgstr ""
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:266
+#, fuzzy
+#| msgid "Very well. I will send guides to lead you north to your allies."
 msgid "Very well. The best of luck in your battle."
-msgstr "分かりました。戦闘での幸運を祈っています。"
+msgstr ""
+"承知しました。あなた方を北のお仲間のところまで導く案内人を送りましょう。"
 
 #. [message]: speaker=unit
 #: data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg:285
