--- a/po/wesnoth-l/ja.po
+++ b/po/wesnoth-l/ja.po
@@ -1,13 +1,14 @@
 # Translators:
-# RatArmy <broadbarredfirefish@gmail.com>, 2018
 # tamanegi, 2018
+# RatArmy <broadbarredfirefish@gmail.com>, 2019
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-04 16:40 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: tamanegi, 2018\n"
+"PO-Revision-Date: 2018-09-12 07:30+0000\n"
+"Last-Translator: RatArmy <broadbarredfirefish@gmail.com>, 2019\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
 "Language: ja\n"
@@ -70,8 +71,10 @@ msgstr ""
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:28
+#, fuzzy
+#| msgid "(Novice level, 8 scenarios.)"
 msgid "(Intermediate level, 8 scenarios.)"
-msgstr "（中級者レベル、8 シナリオ）"
+msgstr "（初級レベル、8 シナリオ）"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:31
