--- a/po/wesnoth-sotbe/ja.po
+++ b/po/wesnoth-sotbe/ja.po
@@ -1,12 +1,13 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2018
 # tamanegi, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-05-18 00:11+0000\n"
 "Last-Translator: tamanegi, 2018\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
@@ -78,7 +79,7 @@ msgstr ""
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:24
 msgid "(Expert level, 18 scenarios.)"
-msgstr "（上級者レベル、18 シナリオ）"
+msgstr "（達人レベル、18 シナリオ）"
 
 #. [about]
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:29
@@ -583,22 +584,24 @@ msgstr "わかった。"
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:212
 msgid "Resist until your people are ready to go (Turn 12)"
-msgstr "出発の準備が整うまで抵抗する (ターン 12 まで)"
+msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:215
 msgid "Resist until your people are ready to go (Turn 13)"
-msgstr "出発の準備が整うまで抵抗する (ターン 13 まで)"
+msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:218
 msgid "Resist until your people are ready to go (Turn 14)"
-msgstr "出発の準備が整うまで抵抗する (ターン 14 まで)"
+msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:223
+#, fuzzy
+#| msgid "Then move Kapou’e to the signpost in the southwest"
 msgid "Then move Kapou’e to the signpost in the Northeast"
-msgstr "そして Kapou’e を北東の道しるべまで移動させる"
+msgstr "そして Kapou’e を南西の道しるべに移動させる"
 
 #. [message]: role=Helper
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:263
@@ -616,8 +619,10 @@ msgstr "随分かかったな。では行くぞ！"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:279
+#, fuzzy
+#| msgid "Move Kapou’e to the signpost in the southwest"
 msgid "Move Kapou’e to the signpost in the Northeast"
-msgstr "Kapou’e を北東の道しるべまで移動させる"
+msgstr "Kapou’e を南西の道しるべへ移動させる"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:329
@@ -822,8 +827,10 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg:315
+#, fuzzy
+#| msgid "Move Kapou’e to the end of the mountains"
 msgid "Move Kapou’e to the end of the mountains or"
-msgstr "Kapou’e を山の端まで移動させる。もしくは"
+msgstr "Kapou’e を山の端まで移動させる"
 
 #. [objective]: condition=lose
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/03_Toward_Mountains_of_Haag.cfg:327
@@ -3966,8 +3973,11 @@ msgstr "良い朝だな、Shan Taum！"
 
 #. [message]: speaker=Shan Taum
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:218
+#, fuzzy
+#| msgid ""
+#| "Who is that? Kapou’e! What are you doing in my lands, you weakling runt?"
 msgid "What... Kapou’e! What in the frozen northlands are you doing here?!"
-msgstr "何だと…… Kapou’e！凍てついた北の地で一体何をしているのだ、貴様？！"
+msgstr "誰だ？誰かと思えば Kapou’e か！弱虫のチビが我が地で何をしているのだ？"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:223
