--- a/po/wesnoth-httt/ja.po
+++ b/po/wesnoth-httt/ja.po
@@ -1,12 +1,14 @@
 # Translators:
 # RatArmy <broadbarredfirefish@gmail.com>, 2018
+# suto3, 2018
 # 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:30 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2018-09-12 07:30+0000\n"
 "Last-Translator: 家庭的の人 <kateitekino_hito@yahoo.co.jp>, 2018\n"
 "Language-Team: Japanese (https://www.transifex.com/wesnoth-jp/teams/60513/"
 "ja/)\n"
@@ -39,7 +41,7 @@ msgstr ""
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:21
 msgid "(Novice level, 23 scenarios.)"
-msgstr "（初心者レベル、23 シナリオ）"
+msgstr "（初級レベル、23 シナリオ）"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:23
@@ -7390,7 +7392,7 @@ msgid ""
 "Princess, when Delfador the Great speaks of the Queen Dowager, Asheviere, "
 "ordering the princes of Wesnoth to be put to death, he speaks the truth."
 msgstr ""
-"王女様、\"偉大なる Delfador\" が今話をした、皇太后 Asheviere が Wesnoth の王"
+"王女様、\"偉大なる Delfador\" が今話をした、王太后 Asheviere が Wesnoth の王"
 "子を殺す命令を出したという話は本当の事なのです。"
 
 #. [message]: speaker=Li'sar
@@ -7418,7 +7420,7 @@ msgid ""
 "Dowager. The throne is rightfully mine, and with the Sceptre I can prove it."
 msgstr ""
 "ええ、それが私が笏を手に入れなければならない理由なのよ。私は戻り、人々は私を"
-"女王として迎えるわ。私は正しく、公正に統治します。母は単なる皇太后よ。王位は"
+"女王として迎えるわ。私は正しく、公正に統治します。母は単なる王太后よ。王位は"
 "正当に私のものよ。笏があればそれを証明できるわ。"
 
 #. [message]: speaker=Delfador
@@ -7439,7 +7441,7 @@ msgid ""
 "adviser and counselor, Delfador."
 msgstr ""
 "ええ、私は笏を持っているわ！ 私は戻り、人々は私を女王として迎えるわ。母は単な"
-"る皇太后よ。王位は正当に私のものよ。そして、私は正義と公正さをもって統治する"
+"る王太后よ。王位は正当に私のものよ。そして、私は正義と公正さをもって統治する"
 "わ。Delfador、あなたを相談役兼顧問として迎えるわ。"
 
 #. [message]: speaker=Delfador
@@ -7889,15 +7891,17 @@ msgstr "クランの試練"
 
 #. [lua]: wesnoth.wml_actions.show_countdown
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:25
+#, fuzzy
+#| msgid "Defeat the enemy leader"
 msgid "Defeat one more enemy unit"
 msgid_plural "Defeat $units_to_slay enemy units"
-msgstr[0] "$units_to_slay ユニットを倒す"
+msgstr[0] "敵のリーダーを倒す"
 
 #. [lua]: wesnoth.wml_actions.show_countdown
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:28
 msgid "Still $units_to_slay clan member to defeat!"
 msgid_plural "Still $units_to_slay clan members to defeat!"
-msgstr[0] "あと $units_to_slay 人！"
+msgstr[0] ""
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:70
@@ -9096,7 +9100,7 @@ msgid ""
 msgstr ""
 "北部の軍勢は Abez の浅瀬のそばにある Galcadar という所で 野営していました。王"
 "は軍を率いてそこに向かいました。彼は軍を 2 つに分けてその半分を彼の息子であ"
-"る Eldred 皇太子に預け、残りの半分を自身で率いました。"
+"る Eldred 王太子に預け、残りの半分を自身で率いました。"
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/utils/intro.cfg:14
